namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: pocs-lab
  name: pocs-lab
