all_in_one.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vertx-ivan
  name: vertx-ivan
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: vertx-ivan
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vertx-ivan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vertx-ivan
  template:
    metadata:
      labels:
        app: vertx-ivan
    spec:
      containers:
      - image: gcr.io/tranformacion-it-lab/vertx-normalizer:1.0.0
        imagePullPolicy: Always
        name: vertx-ivan
        ports:
        - containerPort: 8080
          protocol: TCP
