ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vertx-ssl-ingress
  namespace: default
spec:
  tls:
  - hosts:
    - vertx.lab.ovid-project.com
    secretName: ovidlab
  rules:
  - host: vertx.lab.ovid-project.com
    http:
      paths:
      - backend:
          serviceName: vertx-validator
          servicePort: 8080
        path: /v1/validator
      - backend:
          serviceName: vertx-rsa
          servicePort: 8080
        path: /v1/rsa
      - backend:
          serviceName: vertx-normalizer
          servicePort: 8080
        path: /v1/normalizer
      - backend:
          serviceName: vertx-apidemo
          servicePort: 8080
        path: /v1/customers
      - backend:
          serviceName: vertx-resources
          servicePort: 8080
        path: /v1/resources
      - backend:
          serviceName: micronaut-iam-server
          servicePort: 8080
        path: /iam/v1/
